# rtochius

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  version.h.in
kernel/: CMakeLists.txt  Kconfig
kernel/arch/: Kconfig
kernel/arch/arm64/: CMakeLists.txt  Kconfig  Kconfig.debug  Kconfig.platforms
kernel/arch/arm64/boot/: CMakeLists.txt
kernel/arch/arm64/boot/dts/: CMakeLists.txt
kernel/arch/arm64/boot/dts/origin/: origin.dts  origin.dtsi
kernel/arch/arm64/configs/: defconfig
kernel/arch/arm64/core/: CMakeLists.txt  asm-offsets.c  cpu_errata.c  cpu_ops.c  cpufeature.c  cpuinfo.c  entry.S  extable.c  fpsimd.c  head.S  image.h  init.c  insn.c  ioremap.c  irq.c  linker.lds.S  process.c  psci.c  setup.c  signal.c  smccc-call.S  smp.c  stacktrace.c  syscall.c  traps.c
kernel/arch/arm64/include/asm/: arch_timer.h  asm-bug.h  asm-uaccess.h  assembler.h  boot.h  cache.h  cacheflush.h  cpu.h  cpu_ops.h  cpucaps.h  cpufeature.h  cputype.h  current.h  daifflags.h  debug-monitors.h  esr.h  exception.h  extable.h  fixmap.h  fpsimd.h  hardirq.h  hwcap.h  image.h  insn.h  io.h  irq.h  irqflags.h  kernel-pgtable.h  memory.h  mmu.h  mmu_context.h  page.h  percpu.h  pgalloc.h  pgtable-hwdef.h  pgtable-prot.h  pgtable-types.h  pgtable.h  preempt.h  processor.h  (+16 more)
kernel/arch/arm64/include/uapi/asm/: hwcap.h  ptrace.h
kernel/arch/arm64/lib/: CMakeLists.txt  clear_page.S  clear_user.S  copy_from_user.S  copy_in_user.S  copy_page.S  copy_to_user.S  test.c  uaccess_flushcache.c
kernel/arch/arm64/mm/: CMakeLists.txt  cache.S  context.c  copypage.c  extable.c  fault.c  flush.c  mmap.c  mmu.c  pageattr.c  pgd.c  proc.S  test.c
kernel/core/: CMakeLists.txt  Kconfig.hz  cpu.c  extable.c  fork.c  panic.c  printf.c  smp.c  smpboot.c  softirq.c  stop_machine.c  test.c
kernel/core/irq/: CMakeLists.txt  chip.c  dummychip.c  handle.c  internals.h  irqdesc.c  irqdomain.c  manage.c
kernel/core/locking/: CMakeLists.txt  mcs_spinlock.h  qrwlock.c  qspinlock.c  qspinlock_stat.h  spinlock.c
kernel/core/sched/: CMakeLists.txt  core.c
kernel/core/time/: CMakeLists.txt  jiffies.c  timeconst.bc
kernel/drivers/: CMakeLists.txt  Kconfig
kernel/drivers/clocksource/: Kconfig
kernel/drivers/firmware/: CMakeLists.txt  Kconfig  psci.c
kernel/drivers/irqchip/: Kconfig
kernel/drivers/of/: CMakeLists.txt  Kconfig  address.c  base.c  device.c  fdt.c  fdt_address.c  of_private.h  of_reserved_mem.c  property.c
kernel/drivers/serial/: CMakeLists.txt  Kconfig  amba-pl01x.c  serial.c
kernel/include/asm-generic/: 5level-fixup.h  fixmap.h  irq.h  linker.lds.h  mcs_spinlock.h  percpu.h  pgtable-nop4d-hack.h  pgtable-nop4d.h  pgtable-nopmd.h  pgtable.h  qrwlock.h  qrwlock_types.h  qspinlock.h  qspinlock_types.h  sections.h  switch_to.h  word-at-a-time.h
kernel/include/clocksource/: arm_arch_timer.h
kernel/include/rtochius/: arm-smccc.h  bit_spinlock.h  boot_stat.h  build-salt.h  completion.h  cpu.h  cpumask.h  delay.h  device.h  dump_stack.h  extable.h  fwnode.h  gfp.h  hugepage.h  idr.h  interrupt.h  irq.h  irq_regs.h  irqdesc.h  irqdomain.h  irqflags.h  irqhandler.h  irqnr.h  irqreturn.h  jiffies.h  kbuild.h  kernel_stat.h  lockdep.h  memory.h  mm.h  mm_types.h  mmap.h  mmzone.h  mutex.h  of.h  of_address.h  of_device.h  of_fdt.h  of_graph.h  of_reserved_mem.h  (+34 more)
kernel/include/rtochius/irqchip/: arm-gic-v3.h
kernel/include/rtochius/sched/: clock.h  debug.h  idle.h  init.h  task.h  task_stack.h
kernel/include/uapi/rtochius/: dma-direction.h  magic.h  mmap.h  pci_regs.h  psci.h  resource.h  sched.h  serial.h  utsname.h
kernel/init/: CMakeLists.txt  Kconfig  init_task.c  main.c  version.c
kernel/lib/: CMakeLists.txt  Kconfig  Kconfig.debug  cpumask.c  dec_and_lock.c  dump_stack.c  extable.c  idr.c  irq_regs.c  kasprintf.c  memtest.c  params.c  radix-tree.c  strncpy_from_user.c  strnlen_user.c  test.c  usercopy.c  xarray.c
kernel/librtochius/: CMakeLists.txt  Kconfig  librtochiusConfig.cmake
kernel/librtochius/include/: string.h
kernel/librtochius/src/: CMakeLists.txt
kernel/mm/: CMakeLists.txt  init-mm.c  internal.h  maccess.c  memory.c  page_alloc.c  percpu.c  pgtable-generic.c  slab.c  test.c
lib/base/: CMakeLists.txt  Kconfig  baseConfig.cmake  baseConfigVersion.cmake
lib/base/arch/: Kconfig
lib/base/arch/arm64/: Kconfig
lib/base/arch/arm64/src/: CMakeLists.txt  crc32.S  memchr.S  memcmp.S  memcpy.S  memmove.S  memset.S  strchr.S  strcmp.S  strlen.S  strncmp.S  strnlen.S  strrchr.S
lib/base/include/asm-generic/base/: atomic-long.h  atomic.h  barrier.h  div64.h  elf-em.h  elf.h  errno-base.h  errno.h  generic-linker.lds.h  getorder.h  swab.h  unaligned.h
lib/base/include/asm-generic/base/bitops/: arch_hweight.h  atomic.h  builtin-__ffs.h  (+12 more)
lib/base/include/base/: atomic.h  auxvec.h  bitmap.h  bitops.h  bitrev.h  bits.h  bsearch.h  bug.h  cache.h  common.h  compiler-clang.h  compiler-gcc.h  compiler.h  compiler_attributes.h  compiler_types.h  const.h  cpio.h  crc32.h  crc32poly.h  ctype.h  elf.h  elfnote.h  err.h  errname.h  errno.h  hash.h  init.h  libfdt.h  libfdt_env.h  linkage.h  list.h  list_sort.h  llist.h  log2.h  math64.h  memblock.h  overflow.h  pfn.h  poison.h  print_levels.h  (+15 more)
lib/base/include/base/byteorder/: big_endian.h  generic.h  little_endian.h
lib/base/include/base/unaligned/: access_ok.h  be_byteshift.h  be_memmove.h  be_struct.h  generic.h  le_byteshift.h  le_memmove.h  le_struct.h  memmove.h  packed_struct.h
lib/base/src/: CMakeLists.txt  bitmap.c  bitrev.c  bsearch.c  cmdline.c  cpio.c  crc32.c  ctype.c  div64.c  errname.c  find_bit.c  hexdump.c  hweight.c  kstrtox.c  kstrtox.h  list_sort.c  llist.c  memblock.c  random.c  rbtree.c  sort.c  string.c  string_helpers.c  time.c  timeconv.c  vsprintf.c
lib/base/src/fdt/: CMakeLists.txt  fdt.c  fdt_empty_tree.c  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c  fdt_wip.c
uservice/: CMakeLists.txt  Kconfig
uservice/rtochius_runtime/: CMakeLists.txt
uservice/rtochius_runtime/arch/arm64/: CMakeLists.txt  crt0.S  linker.lds.S  start.c
uservice/rtochius_runtime/arch/arm64/include/: bootinfo.h
(+93 files in other folders)
